# ProvScopeMPI

./: .gitignore  README.md
SC24/gametheory/: init.txt.changed  init.txt.default  makefile  mpi-gametheory.c
SC24/laplace/: Makefile  laplace_init.txt.default  laplace_init.txt.nochange  laplace_mpi.c
SC24/particle/: Makefile  mpi-particle.c
exs/: README.md
exs/buffers/: Makefile  main.cpp
exs/globalAlignment/: Makefile  figure.cpp  simplestExample.c
exs/sample/: Makefile  README.md  main.c  odd_even_mpi.cpp  printbb.c  printbb.cpp
figures/: CCGRIDfigs.ipynb
oddEvenSort/: oddEvenSort.c
oddEvenSort/src/: Makefile
share/: Makefile  README.md  alignment.cpp  alignment.h  alignmentUtils.cpp  alignmentUtils.h  loops.cpp  loops.h  messagePool.cpp  messagePool.h  messageTools.cpp  messageTools.h  mpiProvScope.cpp  mpiRecord.cpp  mpiRecordReplay.h  mpiReplay.cpp  mpiReproduce.cpp  mpirecord.cpp  mpirecordreplay.h  mpireplay.cpp  mpireproduce.cpp  msgbuffer.cpp  msgbuffer.h  msgpool.cpp  msgpool.h  parse.cpp  parse.h  record.cpp  recorddummy.cpp  tools.cpp  tools.h  utils.cpp  utils.h
share/tests/: .messagePoolTests.o.bc  .messageToolTests.o.bc  AMGimitateTests.cpp  Makefile  messagePoolTests.cpp  messageToolTests.cpp  testTools.cpp  testTools.h  testUtils.cpp  testUtils.h
share/tests/data/: data_0_1.txt  data_0_2.txt  data_0_3.txt  data_0_4.txt  data_0_5.txt  data_0_6.txt  data_0_7.txt  data_1_0.txt  data_1_2.txt  data_1_3.txt  data_1_4.txt  (+45 more)
skeleton/: CMakeLists.txt  Makefile  README.md  cfg.cpp  cfg.h  loops.cpp  loops.h  skeleton.cpp  tools.cpp  tools.h
